# terminal-text-styler

./: Cargo.toml  README.md
src/: enums.rs  lib.rs  styled_terminal_text.rs  terminal_style.rs  traits.rs  utility.rs
src/enums/: ansi_background.rs  ansi_foreground.rs  srg_effect.rs
